# landintel

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  KANDAMPALAYAM_ISSUE.md  M3_INVESTIGATION_HANDOFF.md  M3_ISSUE.md  MORNING_REPORT.md  README.md  WORKLOG.md  docker-compose.yml  list_deliverables.py  process_village.py  pyproject.toml  qwen_chat.py  qwen_code.py  render.yaml  run_m1.py  run_m1_numeric_qa.py  run_m1_qa.py  run_m1_verify.py  run_m2.py  run_m2_cad.py  run_m2_qa.py  run_m3.py  run_pipeline.py  teach_qwen.py
deploy/: ec2-setup.sh  nginx.conf
deploy/systemd/: landintel-api.service  landintel-worker.service
docs/: OPEN_PROBLEM_club_all_fmbs.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
input/INGUR/: INGUR RAW DATA FILE.dxf
reference/: autocad_mcp_extracted.py  librecad_extracted.py
src/landintel/: config.py  logging.py
tests/: conftest.py  test_domain_coverage.py  test_landxml.py  test_m3_assemble.py  test_m4_village.py  test_robust_adjust.py  test_rotation.py  test_utm.py
tests/agent/: test_anomaly.py  test_audit.py  test_client.py  test_label_verify.py  test_memory.py  test_tools.py  test_validator.py
tests/agents/: test_agents.py  test_agents_unified.py  test_chat.py  test_coder.py  test_coordinate_finder.py  test_llm_brain.py
tests/api/: test_jobs.py
tests/core/: test_geo.py
tests/db/: test_repositories.py
tests/m1_extract/: test_anchor.py  test_boundary_topology.py  test_build_plot.py  test_connections.py  test_ocr.py  test_ocr_augment.py  test_pdf_glyphs.py  test_pdf_vectors.py  test_to_dxf.py  test_verify_dxf.py
tests/m2_club/: conftest.py  test_agents.py  test_boundary_snap.py  test_club.py  test_club_all.py  test_club_qa_render.py  test_disposition_thresholds.py  test_edge_align.py  test_neighbor_edge.py  test_stone_refine.py  test_stone_verify.py  test_verify.py
tests/m2_georef/: test_cadastral_check.py  test_coverage_gate.py  test_cross_village_guard.py  test_edge_register.py  test_extract.py  test_m3_deliverables.py  test_match.py  test_pipeline_synth.py  test_propagate.py  test_qa_render.py  test_ring_sanity.py  test_schedule_gate.py  test_self_calibrate.py  test_stone_matcher.py  test_topology_corroborate.py  test_transform.py  test_warp.py
tests/m4_report/: test_m4_report.py
tests/m5_cadastral/: conftest.py  test_cadastral.py  test_composite.py  test_fit_rotation_fill.py  test_locality_cluster.py  test_robust_residual.py  test_s3_path.py  test_tngis_tiles.py  test_vector_source.py  test_virtual_corner.py
tests/pipeline/: test_orchestrator.py
tests/storage/: test_s3.py
(+185 files in other folders)
